# Tests
t = executable('tlsfparse_test', 'tlsfparse_test.c',
               link_with : tlsfparse_lib,
               include_directories : tlsf_inc)

test('test parsing tlsf 1', t, args: ['1'])
test('test parsing tlsf 2', t, args: ['2'])
test('test parsing tlsf 3', t, args: ['3'])
test('test parsing tlsf 4', t, args: ['4'])
test('test parsing tlsf 5', t, args: ['5'])
test('test parsing tlsf 6', t, args: ['6'])
test('test parsing tlsf 7', t, args: ['7'])
test('test parsing tlsf 8', t, args: ['8'])
